2008-06-08  Zoltan Varga  <vargaz@gmail.com>

	* mini-amd64.c: Revert most of the last patch for now as it breaks the build.

2008-06-07  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (remove_block_if_useless): Avoid printing the method name.
	
	* mini.c: Remove needless setting of ins->cil_code which is now done by 
	MONO_INST_NEW.

	* mini-amd64.c: Add some code to avoid saving callee saved registers in the
	LMF. Not yet used.

	* tramp-amd64.c (mono_arch_patch_callsite): Tell valgrind to discard the
	translated code after it has been patched.

2008-06-06  Zoltan Varga  <vargaz@gmail.com>

	* mini-amd64.c (emit_call_body): Align the call displacement to 4 bytes to
	avoid problems during code patching on SMP systems.
	(emit_call): Avoid adding a patch info which is already added by 
	emit_call_body.
	(mono_arch_emit_exceptions): Ditto.

2008-06-05  Zoltan Varga  <vargaz@gmail.com>

	* tramp-*.c (mono_arch_get_unbox_trampoline): No need to check for ret->byref,
	MONO_TYPE_ISSTRUCT already checks for it.

2008-06-05  Bill Holmes  <billholmes54@gmail.com>

	* mini-amd64.c:merge_argument_class_from_type: When marshaling 
	  structs with floats on Winx64 the float registers are not used.  
	  The integer registers are always used..
	* mini-amd64.c:add_valuetype:  When marshaling structs on Winx64 
	  only one register will be used and only if the size of the struct 
	  is 1,2,4, or 8 bytes.

	* tramp-amd64.c :  Adjusting size used for mono_global_codeman_reserve
	  to work for Winx64.

	Contributed under MIT/X11 license.

2008-06-05  Martin Baulig  <martin@ximian.com>

	* debug-debugger.c (debugger_lookup_class): Also call
	mono_class_setup_methods() here; we're only called from RTI.

2008-06-05  Andreas Färber  <andreas.faerber@web.de>

	* mini.c (mini_init): Add DTrace probes ves-init-{begin,end}.
	(mini_method_compile) Add DTrace probes method-compile-{begin,end}.
	* Makefile.am (libmono_la_LIBADD,libmono_static_la_LIBADD,mono_LDADD):